@startuml DriveHub
'Garage Pulpo derivador de Tareas'
'Interfaz Gestor de tarifas'
'Biblioteca Moment JS para calculos de fecha'


'Relaciones'
Garage *-d- Vehiculo
Vehiculo .r.> Mantenimiento
Garage <- Cliente
GestionReserva ..> Cliente
GestionReserva <.r. GestionTarifa
GestionReserva <.l. GestionKilometraje
Gestor --> GestionReserva

Garage <-r- Gestor
Garage <- Mantenimiento

class Garage{
    - arrayVehiculos:Vehiculo[]
}

abstract class Vehiculo{
    - matricula: string
    - estado: string implements Gestor
    - tarifa: number
    - disponibilidad: boolean
    - kilometrosRecorridos: number
    - cargo: number
 
    + settersYgetters()
}

abstract class Gestor{
    - arrayGestiones: Gestion?
}

class Compacto extends Vehiculo{
    + settersYgetters()
}

class Sedan extends Vehiculo{

    + settersYgetters()
}

class Suv extends Vehiculo{

    - cargoFijoAdicional: number
    + settersYgetters()
}

class Cliente {
    - vehiculo: Vehiculo

    + settersYgetters()
    + realizarReserva(gestionReserva())
}

class GestionReserva{

    - fechaInicio: Date
    - fechaFin: Date

    + gestionar()    
    + validarDisponibilidad()
    + calcularDiasDeUso()
    + alquilarVehiculo(arrayVehiculos:Vehiculo[]): Vehiculo
    + settersYgetters()
}

class GestionTarifa{

    + gestionar(vehiculo:Vehiculo)
    + settersYgetters()
}

class GestionKilometraje{

    + gestionar()
    + settersYgetters()
}

class Mantenimiento{
    - costoMantenimiento: number
    - fechaMantenimiento: Date

    + settersYgetters()
}

@enduml